# BinPacking

./: .gitignore  CMakeLists.txt  README.md
analyse/: binpacking_analyse.ipynb
src/: CMakeLists.txt  main.cpp
src/algorithmes/: BaseAlgorithme.cpp  BaseAlgorithme.hpp  BestFit.cpp  BestFit.hpp  BestFitDecreasing.cpp  BestFitDecreasing.hpp  CMakeLists.txt  FirstFit.cpp  FirstFit.hpp  FirstFitDecreasing.cpp  FirstFitDecreasing.hpp  NextFit.cpp  NextFit.hpp  NextFitDecreasing.cpp  NextFitDecreasing.hpp  algorithmes.hpp
src/common/: CMakeLists.txt  Conteneur.hpp  GenerateurDonnees.hpp
src/commun/: CMakeLists.txt  Conteneur.cpp  Conteneur.hpp  GenerateurDonnees.hpp
tests/: CMakeLists.txt  test.cpp
